--- a/index.ipynb
+++ b/index.ipynb
@@ -474,7 +474,7 @@
    "outputs": [],
    "source": [
     "# Print the datatype of CO2 and check first 15 values\n",
-    "\n",
+    "CO2.index\n",
     "# datatype of CO2 is <class 'pandas.core.frame.DataFrame'>\n",
     "\n",
     "#               co2\n",
