Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -467,11 +467,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=2284, step=1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the datatype of CO2 and check first 15 values\n",
     "CO2.index\n",
@@ -510,12 +521,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=2284, step=1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Confirm that date values are used for indexing purpose in the CO2 dataset \n",
-    "\n",
+    "CO2.index\n",
     "# DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
     "#                '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
     "#                '1958-05-24', '1958-05-31',\n",
