Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
     "CO2 = pd.DataFrame.from_records(sm.datasets.co2.load().data)\n",
     "CO2['date'] = CO2.date.apply(lambda x: x.decode('utf-8'))\n",
     "CO2['date'] = pd.to_datetime(CO2.date, format='%Y%m%d')\n",
-    "CO2.set_index('date')"
+    "CO2.set_index('date', inplace= Tru)"
    ]
   },
   {
