--- a/index.ipynb
+++ b/index.ipynb
@@ -61,370 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>co2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1958-03-29</th>\n",
-       "      <td>316.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-04-05</th>\n",
-       "      <td>317.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-04-12</th>\n",
-       "      <td>317.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-04-19</th>\n",
-       "      <td>317.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-04-26</th>\n",
-       "      <td>316.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-05-03</th>\n",
-       "      <td>316.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-05-10</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-05-17</th>\n",
-       "      <td>317.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-05-24</th>\n",
-       "      <td>317.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-05-31</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-06-07</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-06-14</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-06-21</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-06-28</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-07-05</th>\n",
-       "      <td>315.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-07-12</th>\n",
-       "      <td>315.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-07-19</th>\n",
-       "      <td>315.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-07-26</th>\n",
-       "      <td>315.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-02</th>\n",
-       "      <td>315.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-09</th>\n",
-       "      <td>315.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-16</th>\n",
-       "      <td>315.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-23</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-30</th>\n",
-       "      <td>314.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-09-06</th>\n",
-       "      <td>313.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-09-13</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-09-20</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-09-27</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-10-04</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-10-11</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-10-18</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-06-09</th>\n",
-       "      <td>373.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-06-16</th>\n",
-       "      <td>372.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-06-23</th>\n",
-       "      <td>372.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-06-30</th>\n",
-       "      <td>372.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-07-07</th>\n",
-       "      <td>372.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-07-14</th>\n",
-       "      <td>371.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-07-21</th>\n",
-       "      <td>371.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-07-28</th>\n",
-       "      <td>370.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-08-04</th>\n",
-       "      <td>369.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-08-11</th>\n",
-       "      <td>369.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-08-18</th>\n",
-       "      <td>369.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-08-25</th>\n",
-       "      <td>369.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-09-01</th>\n",
-       "      <td>368.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-09-08</th>\n",
-       "      <td>368.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-09-15</th>\n",
-       "      <td>368.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-09-22</th>\n",
-       "      <td>367.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-09-29</th>\n",
-       "      <td>367.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-10-06</th>\n",
-       "      <td>367.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-10-13</th>\n",
-       "      <td>367.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-10-20</th>\n",
-       "      <td>368.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-10-27</th>\n",
-       "      <td>368.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-11-03</th>\n",
-       "      <td>368.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-11-10</th>\n",
-       "      <td>368.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-11-17</th>\n",
-       "      <td>369.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-11-24</th>\n",
-       "      <td>370.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-12-01</th>\n",
-       "      <td>370.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-12-08</th>\n",
-       "      <td>370.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-12-15</th>\n",
-       "      <td>371.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-12-22</th>\n",
-       "      <td>371.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-12-29</th>\n",
-       "      <td>371.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2284 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              co2\n",
-       "date             \n",
-       "1958-03-29  316.1\n",
-       "1958-04-05  317.3\n",
-       "1958-04-12  317.6\n",
-       "1958-04-19  317.5\n",
-       "1958-04-26  316.4\n",
-       "1958-05-03  316.9\n",
-       "1958-05-10    NaN\n",
-       "1958-05-17  317.5\n",
-       "1958-05-24  317.9\n",
-       "1958-05-31    NaN\n",
-       "1958-06-07    NaN\n",
-       "1958-06-14    NaN\n",
-       "1958-06-21    NaN\n",
-       "1958-06-28    NaN\n",
-       "1958-07-05  315.8\n",
-       "1958-07-12  315.8\n",
-       "1958-07-19  315.4\n",
-       "1958-07-26  315.5\n",
-       "1958-08-02  315.6\n",
-       "1958-08-09  315.1\n",
-       "1958-08-16  315.0\n",
-       "1958-08-23    NaN\n",
-       "1958-08-30  314.1\n",
-       "1958-09-06  313.5\n",
-       "1958-09-13    NaN\n",
-       "1958-09-20    NaN\n",
-       "1958-09-27    NaN\n",
-       "1958-10-04    NaN\n",
-       "1958-10-11    NaN\n",
-       "1958-10-18    NaN\n",
-       "...           ...\n",
-       "2001-06-09  373.1\n",
-       "2001-06-16  372.8\n",
-       "2001-06-23  372.9\n",
-       "2001-06-30  372.7\n",
-       "2001-07-07  372.1\n",
-       "2001-07-14  371.3\n",
-       "2001-07-21  371.2\n",
-       "2001-07-28  370.6\n",
-       "2001-08-04  369.9\n",
-       "2001-08-11  369.5\n",
-       "2001-08-18  369.3\n",
-       "2001-08-25  369.0\n",
-       "2001-09-01  368.4\n",
-       "2001-09-08  368.2\n",
-       "2001-09-15  368.0\n",
-       "2001-09-22  367.4\n",
-       "2001-09-29  367.4\n",
-       "2001-10-06  367.8\n",
-       "2001-10-13  367.6\n",
-       "2001-10-20  368.1\n",
-       "2001-10-27  368.7\n",
-       "2001-11-03  368.7\n",
-       "2001-11-10  368.8\n",
-       "2001-11-17  369.7\n",
-       "2001-11-24  370.3\n",
-       "2001-12-01  370.3\n",
-       "2001-12-08  370.8\n",
-       "2001-12-15  371.2\n",
-       "2001-12-22  371.3\n",
-       "2001-12-29  371.5\n",
-       "\n",
-       "[2284 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CO2 = pd.DataFrame.from_records(sm.datasets.co2.load().data)\n",
     "CO2['date'] = CO2.date.apply(lambda x: x.decode('utf-8'))\n",
     "CO2['date'] = pd.to_datetime(CO2.date, format='%Y%m%d')\n",
-    "CO2.set_index('date', inplace= Tru)"
+    "CO2.set_index('date', inplace= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,22 +81,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "         date    co2\n",
-      "0  1958-03-29  316.1\n",
-      "1  1958-04-05  317.3\n",
-      "2  1958-04-12  317.6\n",
-      "3  1958-04-19  317.5\n",
-      "4  1958-04-26  316.4\n",
-      "5  1958-05-03  316.9\n",
-      "6  1958-05-10    NaN\n",
-      "7  1958-05-17  317.5\n",
-      "8  1958-05-24  317.9\n",
-      "9  1958-05-31    NaN\n",
-      "10 1958-06-07    NaN\n",
-      "11 1958-06-14    NaN\n",
-      "12 1958-06-21    NaN\n",
-      "13 1958-06-28    NaN\n",
-      "14 1958-07-05  315.8\n"
+      "              co2\n",
+      "date             \n",
+      "1958-03-29  316.1\n",
+      "1958-04-05  317.3\n",
+      "1958-04-12  317.6\n",
+      "1958-04-19  317.5\n",
+      "1958-04-26  316.4\n",
+      "1958-05-03  316.9\n",
+      "1958-05-10    NaN\n",
+      "1958-05-17  317.5\n",
+      "1958-05-24  317.9\n",
+      "1958-05-31    NaN\n",
+      "1958-06-07    NaN\n",
+      "1958-06-14    NaN\n",
+      "1958-06-21    NaN\n",
+      "1958-06-28    NaN\n",
+      "1958-07-05  315.8\n"
      ]
     }
    ],
@@ -467,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -475,10 +125,17 @@
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=2284, step=1)"
+       "DatetimeIndex(['1958-03-29', '1958-04-05', '1958-04-12', '1958-04-19',\n",
+       "               '1958-04-26', '1958-05-03', '1958-05-10', '1958-05-17',\n",
+       "               '1958-05-24', '1958-05-31',\n",
+       "               ...\n",
+       "               '2001-10-27', '2001-11-03', '2001-11-10', '2001-11-17',\n",
+       "               '2001-11-24', '2001-12-01', '2001-12-08', '2001-12-15',\n",
+       "               '2001-12-22', '2001-12-29'],\n",
+       "              dtype='datetime64[ns]', name='date', length=2284, freq=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
